--- a/docs/6.provision-trident-volume-and-storage-class.md
+++ b/docs/6.provision-trident-volume-and-storage-class.md
@@ -85,7 +85,7 @@ NAME                   BACKEND NAME  BACKEND UUID                          PHASE
 backend-fsx-ontap-nas  fsx-ontap     6329459a-55e9-4606-881d-f83e34f558db  Bound  Success
 ```
 
-## (3) Create Storage Class*
+## (3) Create Storage Class
 
 The storage class yaml manifest is located as `storage-class-csi-nas.yaml`
 
@@ -144,4 +144,5 @@ pvc-23d6b9f3-17ce-4845-a433-56b27a996435  10Gi    RWX             Retain        
 And when you navigate back to FSxONTAP console, select “Volumes” of your file system, then you can see the corresponding volume has been created:
 ![Volume01](./images/volume01.png)
 ![Volume02](./images/volume02.png)
+
 Now we have finished configuring the trident operator and verify that it enables us to provision Kubernetes Persistent Volume Claim successfully. In the next section, we will deploy a stateful application that runs on Amazon EKS and have the PersistentVolume provisioned by Trident. 
